# Technopark_ASD

./: .clang-format  .gitignore  1-1.cpp  1-2.cpp  1-3.cpp  1-4.cpp  2-2.cpp  2-3.cpp  2-4.cpp  3-1.cpp  3-2.cpp  3-3.cpp  4-1.cpp  4-2.cpp  4-3.cpp  5-3.cpp  6.cpp  7-2.cpp  CMakeLists.txt
